# ChangeLog for x11-wm/ratpoison
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/ratpoison/ChangeLog,v 1.48 2007/09/05 18:05:37 phreak Exp $

  05 Sep 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing weeve from metadata due to his retirement (see #181019 for reference).

  02 Aug 2007; Roy Marples <uberlord@gentoo.org> ratpoison-1.4.1.ebuild:
  Keyworded ~x86-fbsd, #157553 thanks to Marc Kowarsky.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  ratpoison-1.4.0.ebuild, ratpoison-1.4.1.ebuild:
  Drop virtual/x11 references.

  12 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  -ratpoison-1.3.0.ebuild, -ratpoison-1.4.0_beta2.ebuild,
  -ratpoison-1.4.0_beta4.ebuild:
  Remove ebuilds with broken autotools handling for bug #160061.

  12 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  ratpoison-1.4.0.ebuild:
  stable amd64, bug 160061

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  ratpoison-1.4.0.ebuild:
  stable x86, bug 160061

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org>
  ratpoison-1.4.0.ebuild:
  Stable on ppc.

*ratpoison-1.4.1 (05 Feb 2007)

  05 Feb 2007; Jason Wever <weeve@gentoo.org> +ratpoison-1.4.1.ebuild:
  Version bump.

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ratpoison-1.4.0.ebuild:
  Fix broken autotools handling.

  11 Dec 2006; Jason Wever <weeve@gentoo.org> ratpoison-1.4.0.ebuild:
  Fixed PodParser dependency, resolves bug #157680.

  09 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  ratpoison-1.4.0.ebuild:
  Stable on sparc

  07 Aug 2006; Jeroen Roovers <jer@gentoo.org> ratpoison-1.4.0.ebuild:
  Stable for HPPA (bug #114474).

  28 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-ratpoison-1.3.0, files/digest-ratpoison-1.4.0_beta2,
  Manifest:
  Fixing SHA256 digest, pass four

*ratpoison-1.4.0 (06 Apr 2006)

  06 Apr 2006; Jason Wever <weeve@gentoo.org> ratpoison-1.3.0.ebuild,