@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
-	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
-	</maintainer>
+	<herd>desktop-wm</herd>
 	<longdescription>
 		Ratpoison is a simple Window Manager with no fat library dependencies,
 		no fancy graphics, no window decorations, and no rodent dependence. It
