@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/ratpoison
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/ratpoison/ChangeLog,v 1.48 2007/09/05 18:05:37 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/ratpoison/ChangeLog,v 1.49 2007/09/11 03:00:44 omp Exp $
+
+  11 Sep 2007; David Shakaryan <omp@gentoo.org> metadata.xml:
+  Taking into desktop-wm herd.
 
   05 Sep 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing weeve from metadata due to his retirement (see #181019 for reference).
